Added form with formly

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "NgFormlyValidation"
+  "defaultProject": "NgFormlyValidation",
+  "cli": {
+    "analytics": false
+  }
 }
